test/compile_errors/err_scope_spawn_worker_type.w
//! expect-check-fail: closure return type mismatch

fn main:
    scope s =>:
        s.spawn(() => "bad")
